--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,32 @@
-version: '3'
+version: '3.2'
 
 services:
   nginx:
-    image: nginx:latest
+    image: nginx:1.15.12
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    #volumes:
+    #  - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     #links:
-      #- app
+      #- app1
+
+  app1:
+    depends_on:
+      - db
+    image: tomcat:8.0
+    volumes:
+      - ./app/src:/app
+    ports:
+      - "8081:8080"
+
+  app2:
+    depends_on:
+      - db
+    image: tomcat:8.0
+    volumes:
+      - ./app/src:/app
+    ports:
+      - "8082:8080"
 
   db:
     image: mysql:5.7
@@ -18,7 +36,7 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: dbname
+      MYSQL_DATABASE: bike_championship
       MYSQL_USER: root
       MYSQL_PASSWORD: root
 
