--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,8 +12,8 @@ events {
 
 http {
     upstream backend {
-        server 85.0.0.41:8080 max_fails=3 fail_timeout=30s;      # App instance 1
-        server 85.0.0.42:8080 max_fails=3 fail_timeout=30s;      # App instance 2
+        server app1:8080 max_fails=3 fail_timeout=30s;      # App instance 1
+        server app2:8080 max_fails=3 fail_timeout=30s;      # App instance 2
     }
 
     server {
