--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,74 @@
 version: '3.2'
 
 services:
-  nginx:
+  lb_front:
+    container_name: lb_front
     image: nginx:1.15.12
     ports:
       - "80:80"
-    #volumes:
-    #  - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    #links:
-      #- app1
-
-  app_front:
-    depends_on:
-      - db
-    image: openjdk:8
     volumes:
-      - ./app/src:/app
+      - ./nginx_front/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app_front1
+      - app_front2
+
+  lb_back:
+    container_name: lb_back
+    image: nginx:1.15.12
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app_back1
+      - app_back2
+
+  app_front1:
+    container_name: app_front1
+    image: node:8
+    volumes:
+      - ./src:/app
     ports:
       - "3000:3000"
+    tty: true
 
-  app_back:
+  app_front2:
+    container_name: app_front2
+    image: node:8
+    volumes:
+      - ./src:/app
+    ports:
+      - "3001:3001"
+    tty: true
+
+  app_back1:
+    container_name: app_back1
     depends_on:
       - db
     image: openjdk:8
     volumes:
-      - ./app/src:/app
+      - ./src:/app
     ports:
       - "8081:8080"
+    depends_on:
+      - db
+
+  app_back2:
+    container_name: app_back2
+    depends_on:
+      - db
+    image: openjdk:8
+    volumes:
+      - ./src:/app
+    ports:
+      - "8081:8080"
+    depends_on:
+      - db
 
   db:
+    container_name: db
     image: mysql:5.7
+    restart: always
     volumes:
       - ./database:/var/lib/mysql
     ports:
@@ -41,12 +80,15 @@ services:
       MYSQL_PASSWORD: root
 
   adminer:
+    container_name: adminer
     image: adminer
     restart: always
     ports:
       - 6080:8080
 
   jenkins:
-    image: 'jenkins/jenkins:lts'
+    container_name: jenkins
+    image: 'jenkins/jenkins:2.164'
+    restart: always
     ports:
       - '8080:8080'
