--- a/nginx_back/nginx.conf
+++ b/nginx_back/nginx.conf
@@ -12,8 +12,8 @@ events {
 
 http {
     upstream backend {
-        server app1:8080 max_fails=3 fail_timeout=30s;      # App instance 1
-        server app2:8080 max_fails=3 fail_timeout=30s;      # App instance 2
+        server app_back1:8080 max_fails=3 fail_timeout=30s;      # App instance 1
+        server app_back2:8080 max_fails=3 fail_timeout=30s;      # App instance 2
     }
 
     server {
