--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,8 @@ services:
       - ./database:/var/lib/mysql
     ports:
       - "3306:3306"
-      env_file: .env
+    env_file: 
+      - .env
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: bike_championship
