--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: bike_championship
       MYSQL_USER: root
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_PASSWORD: root
 
   adminer:
     container_name: adminer
