--- a/app_back/Dockerfile
+++ b/app_back/Dockerfile
@@ -1,6 +1,7 @@
 FROM maven:3.6.1-jdk-8-alpine
 
-RUN sh -c 'sh mvnw install'
+RUN sh -c 'ls -la'
+RUN sh -c 'sh ./mvnw install'
 
 ENTRYPOINT ["mvnw","spring-boot:run","-f","./server/"]  
 
