--- a/app_back/Dockerfile
+++ b/app_back/Dockerfile
@@ -2,7 +2,9 @@ FROM maven:3.6.1-jdk-8-alpine
 
 COPY . .
 RUN sh -c 'ls -la'
-RUN sh -c 'unset MAVEN_CONFIG && sh ./mvnw install -X'
+RUN sh -c 'unset MAVEN_CONFIG && sh ./mvnw install -e'
+
+EXPOSE 8080
 
 ENTRYPOINT ["mvnw","spring-boot:run","-f","./server/"]  
 
