--- a/app_front/Dockerfile
+++ b/app_front/Dockerfile
@@ -1,14 +1,9 @@
 FROM node:12
 
-WORKDIR /app
+COPY . .
 
 RUN npm install -g nodemon
 
-COPY src/frontend/package*.json ./
-
-RUN npm install
-
-COPY src/frontend /app
-
 EXPOSE 3000
+
 CMD [ "npm", "start" ]
