--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -21,5 +21,5 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost"
+  "proxy": "http://lb_back:8000"
 }
