--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     volumes:
       - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - app_back2
       - app_back1
+      - app_back2
 
   app_front1:
     container_name: app_front1
@@ -57,6 +57,8 @@ services:
     image: app_back2
     ports:
       - "8081:8080"
+    depends_on:
+      - db
     tty: true
 
   db:
