--- a/app_back/Dockerfile
+++ b/app_back/Dockerfile
@@ -3,7 +3,7 @@ FROM maven:3.6.1-jdk-8-alpine
 COPY . .
 
 #RUN sh -c 'ping -c 1 db'
-RUN sh -c 'ls -la'
+RUN sh 'ls -la'
 RUN sh -c 'unset MAVEN_CONFIG && sh ./mvnw install'
 
 EXPOSE 8080
