--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     volumes:
       - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - app_back1
+    #  - app_back1
     #  - app_back2
 
   app_front1:
@@ -37,17 +37,17 @@ services:
       - "3001:3000"
     tty: true
 
-  app_back1:
-    container_name: app_back1
-    build:
-      context: ./app_back
-      dockerfile: ./Dockerfile
-    image: app_back1
-    ports:
-      - "8081:8080"
-    depends_on:
-      - db
-    tty: true
+  #app_back1:
+  #  container_name: app_back1
+  #  build:
+  #    context: ./app_back
+  #    dockerfile: ./Dockerfile
+  #  image: app_back1
+  #  ports:
+  #    - "8081:8080"
+  #  depends_on:
+  #    - db
+  #  tty: true
 
   #app_back2:
   #  container_name: app_back2
