--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,16 @@ services:
       - app_front1
       - app_front2
 
-  lb_back:
-    container_name: lb_back
-    image: nginx:1.15.12
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-    #  - app_back1
-    #  - app_back2
+  #lb_back:
+  #  container_name: lb_back
+  #  image: nginx:1.15.12
+  #  ports:
+  #    - "8000:8000"
+  #  volumes:
+  #    - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
+  #  depends_on:
+  #    - app_back1
+  #    - app_back2
 
   app_front1:
     container_name: app_front1
