--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx_front/nginx.conf:/etc/nginx/nginx.conf
+    command: bash -c "sudo services nginx restart"
     depends_on:
       - app_front1
       - app_front2
