--- a/nginx_front/nginx.conf
+++ b/nginx_front/nginx.conf
@@ -12,8 +12,8 @@ events {
 
 http {
     upstream backend {
-        server app_front1:3000 max_fails=3 fail_timeout=30s;      # App instance 1
-        server app_front2:3001 max_fails=3 fail_timeout=30s;      # App instance 2
+        server app_front1:3000;      # App instance 1
+        server app_front2:3001;      # App instance 2
     }
 
     server {
@@ -21,7 +21,7 @@ http {
         location / {
             #resolver 8.8.8.8;
             proxy_pass http://backend;
-            proxy_redirect     off;
+            #proxy_redirect     off;
         }
     }
     include       /etc/nginx/mime.types;
@@ -33,9 +33,9 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  65;
+    keepalive_timeout  180;
 
     #gzip  on;
 
-    include /etc/nginx/conf.d/*.conf;
+    #include /etc/nginx/conf.d/*.conf;
 }
