--- a/nginx_front/nginx.conf
+++ b/nginx_front/nginx.conf
@@ -19,9 +19,13 @@ http {
     server {
         listen 80;
         location / {
-            #resolver 8.8.8.8;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+
             proxy_pass http://backend;
-            #proxy_redirect     off;
+            proxy_redirect off;
         }
     }
     include       /etc/nginx/mime.types;
