--- a/nginx_back/nginx.conf
+++ b/nginx_back/nginx.conf
@@ -12,14 +12,20 @@ events {
 
 http {
     upstream backend {
-        server app_back1:8080 max_fails=3 fail_timeout=30s;      # App instance 1
-        server app_back2:8080 max_fails=3 fail_timeout=30s;      # App instance 2
+        server app_back1:8080;      # App instance 1
+        server app_back2:8080;      # App instance 2
     }
 
     server {
         listen 80;
         location / {
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+
             proxy_pass http://backend;
+            proxy_redirect off;
         }
     }
     include       /etc/nginx/mime.types;
@@ -35,5 +41,5 @@ http {
 
     #gzip  on;
 
-    include /etc/nginx/conf.d/*.conf;
+    #include /etc/nginx/conf.d/*.conf;
 }
