--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,40 @@
 version: '3.3'
 
 services:
-  lb_front:
-    container_name: lb_front
+  lb_back:
+    container_name: lb_back
     image: nginx:1.15.12
     ports:
-      - "80:80"
+      - "8000:8000"
     volumes:
-      - ./nginx_front/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - app_front1
-      - app_front2
+      - app_back1
+      - app_back2
 
-  #lb_back:
-  #  container_name: lb_back
-  #  image: nginx:1.15.12
-  #  ports:
-  #    - "8000:8000"
-  #  volumes:
-  #    - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
-  #  depends_on:
-  #    - app_back1
-  #    - app_back2
-
-  app_front1:
-    container_name: app_front1
-    image: drtrem/app_front1:latest
+  app_back1:
+    container_name: app_back1
+    build:
+      context: ./app_back
+      dockerfile: ./Dockerfile
+    image: app_back1
     ports:
-      - "3000:3000"
+      - "8081:8080"
+    depends_on:
+      - db
     tty: true
 
-  app_front2:
-    container_name: app_front2
-    image: drtrem/app_front1:latest
+  app_back2:
+    container_name: app_back2
+    build:
+      context: ./app_back
+      dockerfile: ./Dockerfile
+    image: app_back2
     ports:
-      - "3001:3000"
+      - "8081:8080"
+    depends_on:
+      - db
     tty: true
-
-  #app_back1:
-  #  container_name: app_back1
-  #  build:
-  #    context: ./app_back
-  #    dockerfile: ./Dockerfile
-  #  image: app_back1
-  #  ports:
-  #    - "8081:8080"
-  #  depends_on:
-  #    - db
-  #  tty: true
-
-  #app_back2:
-  #  container_name: app_back2
-  #  build:
-  #    context: ./app_back
-  #    dockerfile: ./Dockerfile
-  #  image: app_back2
-  #  ports:
-  #    - "8081:8080"
-  #  depends_on:
-  #    - db
-  #  tty: true
 
   db:
     container_name: db
@@ -76,6 +51,8 @@ services:
       MYSQL_DATABASE: bike_championship
       MYSQL_USER: root
       MYSQL_PASSWORD: root
+    command: mysql -uroot -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;"
+    command: mysql -uroot -proot -e "FLUSH PRIVILEGES;"
 
   adminer:
     container_name: adminer
