--- a/app_back/Dockerfile
+++ b/app_back/Dockerfile
@@ -2,8 +2,8 @@ FROM maven:3.6.1-jdk-8-alpine
 
 COPY . .
 
-#RUN sh -c 'ping -c 1 db'
-#RUN echo $(ls -1)
+RUN sh -c 'ping -c 1 db'
+RUN echo $(ls -1)
 RUN sh -c 'unset MAVEN_CONFIG && sh ./mvnw install'
 
 EXPOSE 8080
