--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8000:8000"
     volumes:
       - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
+    links:
       - db
       - app_back1
       - app_back2
