--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,73 @@
 version: '3.3'
 
 services:
-  lb_back:
-    container_name: lb_back
+  lb_front:
+    container_name: lb_front
     image: nginx:1.15.12
     ports:
-      - "8000:8000"
+      - "80:80"
     volumes:
-      - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx_front/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - db
-      - app_back1
-      - app_back2
+      - app_front1
+      - app_front2
 
-  app_back1:
-    container_name: app_back1
-    build:
-      context: ./app_back
-      dockerfile: ./Dockerfile
-    image: app_back1
+  #lb_back:
+  #  container_name: lb_back
+  #  image: nginx:1.15.12
+  #  ports:
+  #    - "8000:8000"
+  #  volumes:
+  #    - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
+  #  depends_on:
+  #    - app_back1
+  #    - app_back2
+
+  app_front1:
+    container_name: app_front1
+    image: drtrem/app_front1:latest
     ports:
-      - "8081:8080"
+      - "3000:3000"
     tty: true
 
-  app_back2:
-    container_name: app_back2
-    build:
-      context: ./app_back
-      dockerfile: ./Dockerfile
-    image: app_back2
+  app_front2:
+    container_name: app_front2
+    image: drtrem/app_front1:latest
     ports:
-      - "8081:8080"
+      - "3001:3000"
     tty: true
+
+  #app_back1:
+  #  container_name: app_back1
+  #  build:
+  #    context: ./app_back
+  #    dockerfile: ./Dockerfile
+  #  image: app_back1
+  #  ports:
+  #    - "8081:8080"
+  #  depends_on:
+  #    - db
+  #  tty: true
+
+  #app_back2:
+  #  container_name: app_back2
+  #  build:
+  #    context: ./app_back
+  #    dockerfile: ./Dockerfile
+  #  image: app_back2
+  #  ports:
+  #    - "8081:8080"
+  #  depends_on:
+  #    - db
+  #  tty: true
 
   db:
     container_name: db
     image: mysql:5.7
     restart: always
+    image: db
     volumes:
       - ./database:/var/lib/mysql mysql
-      - ./db:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
     env_file: 
