--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,16 @@ services:
       - app_front1
       - app_front2
 
-  #lb_back:
-  #  container_name: lb_back
-  #  image: nginx:1.15.12
-  #  ports:
-  #    - "8000:8000"
-  #  volumes:
-  #    - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
-  #  depends_on:
-  #    - app_back1
-  #    - app_back2
+  lb_back:
+    container_name: lb_back
+    image: nginx:1.15.12
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./nginx_back/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app_back1
+      - app_back2
 
   app_front1:
     container_name: app_front1
@@ -37,29 +37,29 @@ services:
       - "3001:3000"
     tty: true
 
-  #app_back1:
-  #  container_name: app_back1
-  #  build:
-  #    context: ./app_back
-  #    dockerfile: ./Dockerfile
-  #  image: app_back1
-  #  ports:
-  #    - "8081:8080"
-  #  depends_on:
-  #    - db
-  #  tty: true
+  app_back1:
+    container_name: app_back1
+    build:
+      context: ./app_back
+      dockerfile: ./Dockerfile
+    image: app_back1
+    ports:
+      - "8081:8080"
+    depends_on:
+      - db
+    tty: true
 
-  #app_back2:
-  #  container_name: app_back2
-  #  build:
-  #    context: ./app_back
-  #    dockerfile: ./Dockerfile
-  #  image: app_back2
-  #  ports:
-  #    - "8081:8080"
-  #  depends_on:
-  #    - db
-  #  tty: true
+  app_back2:
+    container_name: app_back2
+    build:
+      context: ./app_back
+      dockerfile: ./Dockerfile
+    image: app_back2
+    ports:
+      - "8081:8080"
+    depends_on:
+      - db
+    tty: true
 
   db:
     container_name: db
