--- a/app_back/Dockerfile
+++ b/app_back/Dockerfile
@@ -2,8 +2,9 @@ FROM maven:3.6.1-jdk-8-alpine
 
 COPY . .
 
-RUN sh -c 'apt-get update'
-RUN sh -c 'apt-get install iputils-ping'
+RUN apt-get update
+RUN apt-get install iputils-ping
+RUN ping -c 1 db
 RUN sh -c 'ping -c 1 db'
 RUN echo $(ls -1)
 RUN sh -c 'unset MAVEN_CONFIG && sh ./mvnw install'
