use compose plugin

--- a/app_back/Dockerfile
+++ b/app_back/Dockerfile
@@ -2,8 +2,7 @@ FROM maven:3.6.1-jdk-8-alpine
 
 COPY . .
 
-RUN apt-get update
-RUN apt-get install iputils-ping
+RUN apt-get update -q -y && apt-get install -q -y iputils-ping
 RUN ping -c 1 db
 RUN sh -c 'ping -c 1 db'
 RUN echo $(ls -1)
