--- a/app_back/Dockerfile
+++ b/app_back/Dockerfile
@@ -5,10 +5,12 @@ COPY . .
 RUN sh -c 'ping -c 1 localhost'
 RUN sh -c 'ping -c 1 db'
 RUN echo $(ls -1)
-RUN sh -c 'unset MAVEN_CONFIG && sh ./mvnw install'
+#RUN sh -c 'unset MAVEN_CONFIG && sh ./mvnw install'
 
 EXPOSE 8080
 
-ENTRYPOINT ["mvnw","spring-boot:run","-f","./server/"]  
+#ENTRYPOINT ["mvnw"","spring-boot:run","-f","./server/"]  
+#CMD ["mvnw"]
 
-CMD ["mvn"]
+ENTRYPOINT ["mvnw","&&","sh","./mvnw install","&&","mvnw","spring-boot:run","-f","./server/"]
+#CMD ["mvnw","spring-boot:run","-f","./server/"]
